--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>로또</title>
-</head>
-<body>
-Hello World!!
-</body>
+    <head>
+        <title>로또</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta name="description" content="" />
+        <meta name="keywords" content="" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
+    <body class="is-preload">
+        <header id="header">
+            <a class="logo" href="index.html">Lotto</a>
+        </header>
+        <section id="banner">
+            <div class="inner">
+                <h1>로또</h1>
+                <p>당신의 인생까지 거시겠습니까?</p>
+            </div>
+            <video autoplay loop muted playsinline src="images/banner.mp4"></video>
+        </section>
+        <section class="wrapper">
+            <div class="inner">
+                <header class="special">
+                    <h2>장당 1,000원</h2>
+                    <p>(수동으로 입력하지 않은 만큼은 자동 발권됩니다.)</p>
+                </header>
+                <section>
+                    <div class="content">
+                        <form action="/lotto" method="post">
+                            투자금 : <input id="investment" type="text" name="investment" onchange="resetManualInputs()" />
+                            <br />
+                            <div align="right">
+                                수동 번호 입력 :
+                                <input type="button" value="+" onclick="addManualInputs()" />
+                                <input type="button" value="-" onclick="removeManualInputs()" />
+                            </div>
+                            <br />
+                            <br />
+                            <p id="manualNumbersContainer">
+                            </p>
+                        </form>
+                    </div>
+                </section>
+            </div>
+        </section>
+        <footer id="footer">
+            <div class="inner">
+                <div class="content">
+                    <section>
+                        <h3>우아한테크코스</h3>
+                        <p>로또</p>
+                    </section>
+                </div>
+                <div class="copyright">
+                    &copy; Doughnut.
+                </div>
+            </div>
+        </footer>
+        <script type="text/javascript">
+            const price = 1000
+            let max = 0
+            let amount = 0
+
+            function addManualInputs() {
+                if (max === amount) {
+                    alert("투자금이 부족합니다.")
+                    return
+                }
+                const textbox = document.createElement("input")
+                textbox.setAttribute("type","text");
+                textbox.setAttribute("name", "manualNumbers[]")
+                document.getElementById("manualNumbersContainer").appendChild(textbox)
+                document.getElementById("manualNumbersContainer").appendChild(document.createElement("br"))
+                amount++
+            }
+
+            function resetMaxAmountOfLottos() {
+                max = Math.floor(document.getElementById("investment").value / price)
+            }
+
+            function removeManualInputs() {
+                if (amount > 0) {
+                    const container = document.getElementById("manualNumbersContainer")
+                    container.removeChild(container.lastChild)
+                    container.removeChild(container.lastChild)
+                    amount--
+                }
+            }
+
+            function resetManualInputs() {
+                if (document.getElementById("investment").value < 0) {
+                    document.getElementById("investment").value = 0
+                }
+                resetMaxAmountOfLottos()
+                while (max < amount) {
+                    removeManualInputs()
+                }
+            }
+        </script>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
