ADD : Lotto html files

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>로또</title>
+    <title>로또 구매하기</title>
 </head>
 <body>
-Hello World!!
+    <h1>로또 구매 금액 입력</h1>
+    <form action="/purchase">
+        구매금액 : <input type="text" name="amount"/>
+        <br>
+        <br>
+        <input type="submit" value="구매금액 입력"/>
+    </form>
 </body>
 </html>
