--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Hello, world!</title>
 </head>
@@ -26,12 +26,29 @@
         display: inline-block;
     }
 
+    .winningNumber {
+        margin: 8px;
+        cursor: pointer;
+        width: 30px;
+        text-align: center;
+        display: inline-block;
+    }
+
     .selItem {
         margin: 8px;
         cursor: pointer;
         width: 30px;
         text-align: center;
         display: inline-block;
+    }
+
+    .cancel {
+        margin: 8px;
+        cursor: pointer;
+        width: 30px;
+        text-align: center;
+        display: inline-block;
+        font-size: 4px;
     }
 
     .black {
@@ -43,6 +60,16 @@
         border: 3px solid red;
     }
 
+    .yellow {
+        background-color: yellow;
+        border: 3px solid yellow;
+    }
+
+    .blue {
+        background-color: blue;
+        border: 3px solid blue;
+    }
+
     .inputForm {
         margin: 8px;
         width: 100px;
@@ -52,135 +79,266 @@
 
 <body>
 
-<h1>로또 구매</h1>
-<div class="section">
-    <span>구입 금액 : </span><input class="form-control inputForm" id="money" type="number">
-    <button id="inputMoney">입력</button>
-</div>
+    <h1>로또 구매</h1>
+    <div class="section">
+        <span>구입 금액 : </span><input class="form-control inputForm" id="money" type="number">
+        <button id="inputMoney">입력</button>
+    </div>
 
-<div class="section">수동 입력</div>
-<div class="section" id="item">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="section">수동 입력</div>
+            <div class="section" id="manualItem">
+            </div>
+        </div>
 
-</div>
+        <div class="col-md-6">
+            <div id="lottoList">
+                <div class="section">수동 선택 리스트</div>
+            </div>
+            <button class="section" id="addAutoItem">나머지 자동 구매</button>
+        </div>
 
-<button class="section" id="addAutoItem">나머지 자동 구매</button>
+    </div>
 
-<div id="lottoList">
-    <div class="section">수동 구매 리스트</div>
-</div>
+    <hr />
 
+    <div class="row">
+        <div class="col-md-6">
+            <div class="section">지난주 로또 번호 입력</div>
+            <div class="section" id="winningItem">
+            </div>
+        </div>
 
+        <div class="col-md-6">
+            <div class="section">로또 구매 결과</div>
+            <div id="lottoItemList">
+            </div>
+            <button class="section" id="btn_lotto_result">결과 보기</button>
+        </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    </div>
+
+    <hr />
+
+    <div>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<script>
-    $(document).ready(function () {
+    <script>
+        $(document).ready(function () {
 
-        initNumber();
+            initNumber('manualItem');
 
-        $(document).on("click", ".number", function () {
-            if ($('.red').length < 6 || $(this).hasClass('red')) {
-                if ($(this).hasClass('red')) {
-                    $(this).removeClass('red');
-                    $(this).addClass('black');
+            $(document).on("click", ".number", function () {
+                if ($('.red').length < 6 || $(this).hasClass('red')) {
+                    if ($(this).hasClass('red')) {
+                        $(this).removeClass('red');
+                        $(this).addClass('black');
+                    } else {
+                        $(this).removeClass('black');
+                        $(this).addClass('red');
+                    }
                 } else {
-                    $(this).removeClass('black');
-                    $(this).addClass('red');
+                    alert("로또 번호는 6자리!");
                 }
-            } else {
-                alert("로또 번호는 6자리!");
-            }
-        });
+            });
 
-        $('#inputMoney').click(function () {
-            $('#money').attr("readonly", "readonly");
-        });
+            $(document).on("click", ".winningNumber", function () {
+                if ($('.yellow').length < 6 || $(this).hasClass('yellow')) {
+                    if ($(this).hasClass('yellow')) {
+                        $(this).removeClass('yellow');
+                        $(this).removeClass('blue');
+                        $(this).addClass('black');
+                    } else {
+                        $(this).removeClass('black');
+                        $(this).removeClass('blue');
+                        $(this).addClass('yellow');
+                    }
+                } else {
+                    alert("로또 번호는 6자리!");
+                }
+            });
 
-        $(document).on("click", "#addItem", function () {
-            if (!$('#money').is("[readonly]")) {
-                alert("금액을 입력하세요");
-                return;
-            }
+            $(document).on("contextmenu", ".winningNumber", function (event) {
+                event.preventDefault();
+                if ($('.blue').length < 1 || $(this).hasClass('blue')) {
+                    if ($(this).hasClass('blue')) {
+                        $(this).removeClass('yellow');
+                        $(this).removeClass('blue');
+                        $(this).addClass('black');
+                    } else {
+                        $(this).removeClass('black');
+                        $(this).removeClass('yellow');
+                        $(this).addClass('blue');
+                    }
+                } else {
+                    alert("보너스 번호는 1자리!");
+                }
+            });
 
-            if ($('.red').length != 6) {
-                alert("로또 번호는 6자리!");
-                return;
-            }
+            $('#inputMoney').click(function () {
+                $('#money').attr("readonly", "readonly");
+            });
 
-            var itemLength = $('#lottoList').find('.lottoItem').length;
-            var maxItem = Math.floor($('#money').val() / 1000);
-            console.log(itemLength + " : " + maxItem);
-            if (itemLength < maxItem) {
-                $('#lottoList').append('<div class="lottoItem" data_no="' + itemLength + '">');
+            var uniqueId = (function () { var id = 0; return function () { return id++; } })();
 
-                $('.red').each(function (index, item) {
-                    var chlid = '<div class="black selItem">' + item.innerHTML + '</div>';
-                    $('#lottoList').find('.lottoItem[data_no=' + itemLength + ']').append(chlid);
+            $(document).on("click", "#addItem", function () {
+                if (!$('#money').is("[readonly]")) {
+                    alert("금액을 입력하세요");
+                    return;
+                }
+
+                if ($('.red').length != 6) {
+                    alert("로또 번호는 6자리!");
+                    return;
+                }
+
+                var itemLength = $('#lottoList').find('.manualLotto').length;
+                var maxItem = Math.floor($('#money').val() / 1000);
+                console.log(itemLength + " : " + maxItem);
+
+                if (itemLength < maxItem) {
+                    var data = uniqueId();
+                    $('#lottoList').append('<div class="manualLotto" data_no="' + data + '">');
+
+                    $('.red').each(function (index, item) {
+                        var chlid = '<div class="black selItem">' + item.innerHTML + '</div>';
+                        $('#lottoList').find('.manualLotto[data_no=' + data + ']').append(chlid);
+                    });
+                    var cancel = '<div class="cancel"> 삭제 </div>';
+                    $('#lottoList').find('.manualLotto[data_no=' + data + ']').append(cancel);
+                } else {
+                    alert("수동 최대!!!");
+                }
+
+                initNumber('manualItem');
+
+            });
+
+            $(document).on("click", ".cancel", function () {
+                $(this).parent().remove();
+            });
+
+            $('#addAutoItem').click(function () {
+                if (!$('#money').is("[readonly]")) {
+                    alert("금액을 입력하세요");
+                    return;
+                }
+
+                var lottoItems = new Array();
+
+                $('.manualLotto').each(function (index) {
+                    var arrNumber = new Array();
+                    for (var i = 0; i < 6; i++) {
+                        arrNumber[i] = this.children[i].innerHTML;
+                    }
+                    lottoItems[index] = arrNumber.join();
                 });
-            } else {
-                alert("수동 최대!!!");
+
+                var money = $('#money').val();
+
+                var data = {
+                    'money': money,
+                    'lottoItems': lottoItems
+                };
+                console.log(data);
+                $.ajax({
+                    method: 'POST',
+                    data: data,
+                    url: '/lotto',
+                    success: function (data) {
+                        console.log(data);
+                        var json_obj = $.parseJSON(data);
+                        $('#lottoItemList').empty();
+                        for (var i = 0 in json_obj) {
+                            resultNumber('winningItem');
+                            var no = uniqueId();
+                            $('#lottoItemList').append('<div class="lottoItem" data_no="' + no + '">');
+                            for (var j = 0 in json_obj[i]) {
+                                var chlid = '<div class="black selItem">' + json_obj[i][j] + '</div>';
+                                $('#lottoItemList').find('.lottoItem[data_no=' + no + ']').append(chlid);
+                            }
+                        }
+
+                    }
+                });
+
+            });
+
+            $('#btn_lotto_result').click(function () {
+                if ($('.yellow').length != 6) {
+                    alert("당첨 번호는 6자리!");
+                    return;
+                }
+                if ($('.blue').length != 1) {
+                    alert("보너스 번호는 1자리!(오른쪽 버튼)");
+                    return;
+                }
+                var winningLotto = new Array();
+                $('.yellow').each(function(index, item) {
+                    winningLotto[index] = item.innerHTML;
+                });
+                console.log(winningLotto);
+                console.log($('.blue')[0].innerHTML);
+
+                var bonus = $('.blue')[0].innerHTML;
+                var data = {
+                    'bonus' : bonus,
+                    'winningLotto' : winningLotto.join()
+                }
+
+                $.ajax({
+                    method: 'POST',
+                    data: data,
+                    url: '/lottoResult',
+                    success: function (data) {
+                    }
+                });
+
+            });
+
+            function initNumber(type) {
+                $('#' + type).empty();
+
+                for (var i = 1; i < 46; i++) {
+                    chlid = '<div class=" number black">' + i + '</div>';
+                    if (i % 6 == 0) {
+                        chlid = '<div class="number black">' + i + '</div> <br/>';
+                    }
+                    $('#' + type).append(chlid);
+                }
+                chlid = '<button class="section" id="addItem">선택</button>'
+                $('#' + type).append(chlid);
             }
 
-            $('#item').empty();
-            initNumber();
+            function resultNumber(type) {
+                $('#' + type).empty();
+
+                for (var i = 1; i < 46; i++) {
+                    chlid = '<div class="winningNumber black">' + i + '</div>';
+                    if (i % 6 == 0) {
+                        chlid = '<div class="winningNumber black">' + i + '</div> <br/>';
+                    }
+                    $('#' + type).append(chlid);
+                }
+                $('#' + type).append(chlid);
+            }
 
         });
 
-        $('#addAutoItem').click(function () {
-            var lottoItems = new Array();
-
-            $('.lottoItem').each(function (index) {
-                var arrNumber = new Array();
-                for (var i = 0; i < 6; i++) {
-                    arrNumber[i] = this.children[i].innerHTML;
-                }
-                lottoItems[index] = arrNumber.join();
-            });
-
-            var money = $('#money').val();
-
-            var data = {
-                'money': money,
-                'lottoItems': lottoItems
-            };
-
-
-            console.log(data);
-            $.ajax({
-                method: 'POST',
-                data: data,
-                url: '/lotto',
-                success: function (data) {
-                    $('#result').text(data);
-                }
-            });
-
-        });
-
-        function initNumber() {
-            for (var i = 1; i < 46; i++) {
-                var chlid = '<div class=" number black">' + i + '</div>';
-                if (i % 6 == 0) {
-                    chlid = '<div class="number black">' + i + '</div> <br/>';
-                }
-                $('#item').append(chlid);
-            }
-            chlid = '<button class="section" id="addItem">수동 구매</button>'
-            $('#item').append(chlid);
-        }
-
-    });
-
-</script>
+    </script>
 </body>
 
 </html>
