--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>로또 구매하기</title>
+  <meta charset="UTF-8">
+  <title>로또 구매하기</title>
 </head>
 <body>
+  <div id="body">
     <h1>로또 구매 금액 입력</h1>
     <form action="/purchase">
-        구매금액 : <input type="text" name="amount"/>
-        <br>
-        <br>
-        <input type="submit" value="구매금액 입력"/>
+      구매금액 : <input type="text" name="amount"/>
+      <br>
+      <br>
+      <input type="submit" value="구매금액 입력"/>
     </form>
+  </div>
 </body>
 </html>
