--- a/src/main/resources/templates/numbers.html
+++ b/src/main/resources/templates/numbers.html
@@ -6,15 +6,25 @@
 </head>
 <body>
 <h1>수동 구매 수량 입력</h1>
-    <form action="/numbers">
+    <div>
         총 구매 수량 : {{ count }}
         <br>
         <br>
         수동 구매 수량 : {{ manual }}
         <br>
         <br>
-        <input type="text" name="lottonumbers"/>
-        <input type="submit" value="수동 번호 입력"/>
+    </div>
+    <form id="tags" action="/numbers" method="post">
     </form>
 </body>
+<script>
+    var manualcount = new URLSearchParams(window.location.search).get("manual")
+
+    for (var i = 0; i < manualcount; i++) {
+        var manualLottoInput = '<input type="text" name="manual' + i +'"><br><br>'
+        document.getElementById("tags").innerHTML += manualLottoInput
+    }
+
+    document.getElementById("tags").innerHTML += '<input type="submit" value="수동 번호 입력"/>'
+</script>
 </html>
