add index.html which gets input of lotto game(input of money, manual lotto count, manual lotto numbers

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,12 @@
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+<form action="/result" method="post">
+    구입금액: <input name="money" type="text"/>
+    <br><br>
+    수동 로또 개수: <input name="manualLottoCount" type="text"/>
+    <br><br>
+    수동 로또 번호 입력: <textarea name="lottoNumbers" rows=4></textarea>
+</form>
 </body>
 </html>
