--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+<form>
+    <div class="form-group">
+        <label for="inputPayment">구입금액을 입력해주세요</label>
+        <input type="text" class="form-control" id="inputPayment" aria-describedby="emailHelp" placeholder="구입 금액">
+        <small id="paymentHelp" class="form-text text-muted">로또 하나당 가격은 1000원 입니다</small>
+    </div>
+    <div class="form-group">
+        <label for="inputCountOfManualLotto">로또번호를 수동으로 생성할 로또의 개수를 입력해주세요</label>
+        <input type="text" class="form-control" id="inputCountOfManualLotto" placeholder="개수">
+        <small id="countOfManualLottoHelp" class="form-text text-muted">총 로또개수 이하의 숫자를 입력하세요</small>
+    </div>
+    <button type="submit" class="btn btn-primary">다음</button>
+</form>
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
