--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,11 @@
     <title>로또</title>
 </head>
 <body>
-<form action="/result" method="post">
+<form action="/manual" method="post">
     구입금액: <input name="money" type="text"/>
     <br><br>
     수동 로또 개수: <input name="manualLottoCount" type="text"/>
-    <br><br>
-    수동 로또 번호 입력: <textarea name="lottoNumbers" rows=4></textarea>
+    <input type="submit" value="입력"/>
 </form>
 </body>
 </html>
