show user the generated lottos

--- a/src/main/resources/templates/manual.html
+++ b/src/main/resources/templates/manual.html
@@ -5,7 +5,7 @@
     <title>수동 로또 입력 페이지</title>
 </head>
 <body>
-<form action="/result" method="post">
+<form action="/lottos" method="post">
     {{#each manualLottoNames}}
     수동 로또 번호: <input name="{{this}}" type="text"/>
     <br><br>
