feat: 다시하기 버튼 추가

--- a/src/main/resources/templates/lottoResult.html
+++ b/src/main/resources/templates/lottoResult.html
@@ -21,5 +21,7 @@
 <br/>
 총 수익률은 {{totalEarningRate}}%입니다.
 
+<br/>
+<input type="button" value="다시 하기" onClick="location.href='form.html'">
 </body>
 </html>
