--- a/src/main/resources/templates/winningLotto.html
+++ b/src/main/resources/templates/winningLotto.html
@@ -20,11 +20,11 @@
     <form action="/lottoResult" method="post">
         <tr>
             <th>지난 주 당첨 번호:</th>
-            <td><input type="text" placeholder="Ex) 1,2,3,4,5,6" name="winningNumbers"/></td>
+            <td><input type="text" placeholder="1,2,3,4,5,6" name="winningNumbers"/></td>
         </tr>
         <tr>
             <th>보너스 번호:</th>
-            <td><input type="text" placeholder="Ex) 7" name="bonusNumber"/></td>
+            <td><input type="text" placeholder="7" name="bonusNumber"/></td>
         </tr>
         <tr>
             <td colspan="2">
