make LottosDTO file

--- a/src/main/resources/templates/lottos.html
+++ b/src/main/resources/templates/lottos.html
@@ -11,5 +11,11 @@
 {{this}}
 <br>
 {{/lottos}}
+<form action="/result" method="post">
+    당첨 번호(보너스 번호 제외) : <input name="winningLotto" type="text"/>
+    <br>
+    보너스 번호 : <input name="bonusNumber" type="text"/>
+    <input type="submit" value="입력"/>
+</form>
 </body>
 </html>
