UPDATE : Refactor HTML files

--- a/src/main/resources/templates/manual.html
+++ b/src/main/resources/templates/manual.html
@@ -10,7 +10,8 @@
         총 구매 수량 : <div id="count">{{ count }}</div>
         <br>
         <br>
-        수동 구매 수량 : <input id="manual" type="number" min="0" name="manual"/>
+        <label for="manual">수동 구매 수량 :</label>
+        <input id="manual" type="number" min="0" name="manual"/>
         <br>
         <br>
         <input type="submit" value="수동 구매 수량 입력"/>
