--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -7,11 +7,17 @@
 <body>
 <h1>당첨 번호 입력하기</h1>
 <div>수동으로 {{manualcount}}장, 자동으로 {{autocount}}장 구매하였습니다.</div>
-<div>{{lottos}}</div>
+<div>
+  {{#lottos}}
+  {{this}}
+  <br>
+  {{/lottos}}
+</div>
 <form action="/winning">
   <br>
   <br>
-  당첨번호 입력 : <input type="text" name="winninglotto" />
+  <label for="winninglotto">당첨번호 입력 :</label>
+  <input id="winninglotto" type="text" name="winninglotto" />
   <br>
   <br>
   <input type="submit" value="당첨번호 입력" />
