--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,13 +5,14 @@
   <title>로또 구매하기</title>
 </head>
 <body>
-  <div id="body">
-    <h1>로또 구매 금액 입력</h1>
-    <form action="/purchase">
-      구매금액 : <input type="text" name="amount"/>
-      <br>
-      <br>
-      <input type="submit" value="구매금액 입력"/>
+  <div>
+    <h1>로또 프로그램</h1>
+    <form action="/buy">
+      <input type="submit" value="구매하기"/>
+    </form>
+
+    <form action="/lookup">
+      <input type="submit" value="조회하기"/>
     </form>
   </div>
 </body>
