--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
                 <button type="button" class="btn btn-primary btn-lg" style="margin-top: 200px">지난 회차 정보 확인</button>
             </div>
             <div class="container">
-                <button type="button" class="btn btn-success btn-lg mt-1">로또 구매</button>
+                <button type="button" class="btn btn-success btn-lg mt-1" onclick="location.href='/purchase'">로또 구매</button>
             </div>
         </div>
     <!-- Optional JavaScript -->
